crates/plotnik-lib/tests/02-parser/recovery_unexpected/predicate_parenthesized_no_cascade.txt
(call (#eq? @x "foo"))
==== diagnostics ====
error: tree-sitter predicates are not supported
 --> query.ptk:1:8
  |
1 | (call (#eq? @x "foo"))
  |        ^^^^
  |
help: use `(node == "x")`
